11-kubernetes-ingress-configmaps-secrets/04-full-demo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  labels:
    app: yatri-app
spec:
  replicas: 2
  selector:
    matchLabels:
      component: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-app
        component: yatri-frontend
    spec:
      containers:
        - name: frontend
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend
  labels:
    app: yatri-app
spec:
  selector:
    component: yatri-frontend
  ports:
    - port: 80
      targetPort: 80
